# llvm-pass-infra

FirstPassStandalonePlugin/: CMakeLists.txt  README.md  README.txt
FirstPassStandalonePlugin/include/: commonheaders.h  helloworld.h
FirstPassStandalonePlugin/inputs/: test.bc  test.cpp  test.ll
FirstPassStandalonePlugin/lib/: CMakeLists.txt  helloworld.cpp  legacyhelloworld.cpp  newpmhelloworld.cpp
